# Master-s-Degree

./: .gitmodules  .pre-commit-config.yaml  README.md  build_images.sh  compose.yaml  compose_dev.yaml  dev-requirements.txt  disable_autostart.sh  docker_env.env  enable_autostart.sh  nav2_params_controller_smac_planner_2d.yaml  nav2_params_controller_smac_planner_lattice.yaml  pull_dev_images.sh  pull_repos.sh  results copy.txt  results.txt  show_logs.sh  start_mobot.sh  start_sending_waypoints.sh  start_simulation.sh  start_visualization.sh  test.sh  vfo_2.text  vfo_tuning.text  vfo_tuning_fixed copy.text  vfo_tuning_fixed.text
.github/workflows/: docker-image.yml
AGV-Controller/: .gitignore  Dockerfile  README.md  dockerize.sh
AGV-Controller/scripts/: entrypoint.sh
AGV-Controller/src_files/: req.txt
AGV-Controller/src_files/pip_req/: pymodbus-3.1.3-py2.py3-none-any.whl
AGV-Controller/src_files/src/controller/: package.xml  setup.py
AGV-Controller/src_files/src/odometry/: CMakeLists.txt  package.xml
AGV-Controller/src_files/src/odometry/include/odometry/: odom.cpp  odom.h
AGV-Controller/src_files/src/odometry/launch/: odometry.launch.py
AGV-Controller/src_files/src/odometry/src/: odom_node.cpp
AGV-Controller/src_files/src/scan/: CMakeLists.txt  package.xml
AGV-Controller/src_files/src/scan/launch/: two_nanoscan.launch.py
AGV-Navigation/: Dockerfile  dockerize.sh  save_map_local.sh
AGV-Navigation/scripts/: entrypoint.sh  waypoint_sender.py
AGV-Navigation/src_files/src/agv_controller/: CMakeLists.txt  agv_controller_plugin.xml  package.xml
AGV-Navigation/src_files/src/agv_controller/include/agv_controller/: agv_controller.hpp
AGV-Navigation/src_files/src/agv_controller/src/: agv_controller.cpp
AGV-Navigation/src_files/src/agv_navigation/: package.xml  setup.py
AGV-Navigation/src_files/src/agv_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
AGV-Remote/: Dockerfile  README.md  dockerize.sh  run_local.sh
AGV-Remote/scripts/: entrypoint.sh
AGV-Remote/src_files/src/agv_remote/: package.xml  setup.py
AGV-Simulation-ROS2-Gazebo/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.md  dockerize.sh
AGV-Simulation-ROS2-Gazebo/scripts/: entrypoint.sh  rebuild_model.sh
AGV-Simulation-ROS2-Gazebo/src_files/src/agv_simulation/: CMakeLists.txt  package.xml
AGV-Simulation-ROS2-Gazebo/src_files/src/scan/: package.xml
AGV-Tests/: params.py  test.py  test.sh
AGV-Tests/params_for_tests/: nav2_params_controller_navfn_planner.yaml  nav2_params_controller_smac_planner_hybrid.yaml  nav2_params_controller_theta_star.yaml
AGV-Waypoint_Sender/: .gitignore  Dockerfile  README.md  dockerize.sh  save_map.sh
AGV-Waypoint_Sender/data/: results copy.csv
AGV-Waypoint_Sender/test/: main.py  params.py  process_data.ipynb  tables.py  tables_vfo.py  test.py  test_class.py  utils.py
AGV-Waypoint_Sender/test/parameters/: amcl.py  controllers.py  costmaps.py  others.py  planners.py
ROS2_Kinco_Servo/: Dockerfile  dockerize.sh
ROS2_Kinco_Servo/scripts/: entrypoint.sh
params_for_tests/: nav2_params_controller_navfn_planner.yaml  nav2_params_controller_theta_star.yaml
tests_results/: test_final.txt
waypoints/: 2023-08-09.txt  2023-08-10.txt  test_final1.txt
(+53 files in other folders)
